수정 진행