@@ -8,6 +8,7 @@ import org.eppay.api.common.error.BaseException;
 import org.eppay.api.domain.storeProductOption.model.StoreProductOptionDto;
 import org.eppay.api.domain.storeProductOption.model.StoreProductOptionEntity;
 import org.eppay.api.domain.storeProductOption.repository.StoreProductOptionRepository;
+import org.eppay.api.domain.storeProductOptionRel.repository.StoreProductOptionRelRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -18,10 +19,18 @@ import java.util.stream.Collectors;
 public class StoreProductOptionService {
 
     private final StoreProductOptionRepository repository;
+    private final StoreProductOptionRelRepository storeProductOptionRelRepository;
+
     private final ObjectMapper objectMapper;
 
     public List<StoreProductOptionDto.Response> getList(StoreProductOptionDto.SearchRequest request) throws Exception{
-        return repository.findByStoreId(request.getStoreId()).stream().map(StoreProductOptionDto.Response::fromEntity).collect(Collectors.toList());
+        List<StoreProductOptionDto.Response> list=repository.findByStoreId(request.getStoreId()).stream().map(StoreProductOptionDto.Response::fromEntity).toList();
+        if(request.getStoreProductId()!=null) { // 매핑시 해당 데이터를 포함하는지 여부
+            for (StoreProductOptionDto.Response response : list) {
+                response.setExistProduct(storeProductOptionRelRepository.existsByStoreProductIdAndStoreProductOptionId(request.getStoreProductId(), response.getId()));
+            }
+        }
+        return list;
     }
 
     public StoreProductOptionDto.Response getOne(StoreProductOptionDto.SearchRequest request) throws Exception{
